fix: centering align submit input

--- a/src/public/css/about.less
+++ b/src/public/css/about.less
@@ -225,6 +225,11 @@ justify-content: center;
     border-radius: 3px;
     box-shadow: 0 12px 27px 0 rgba(0,0,0,.06);
   }
+  
+.div-btn {
+  text-align: center;
+}
+
 
 
 @media (min-width: 120px) and (max-width: 500px) {
